--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -1,11 +1,11 @@
 * {
-    font-family: "Handlee", cursive;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 header {
+    font-family: "Playfair", serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,7 +45,7 @@ header {
     text-decoration: none;
     color: black;
     font-size: 1.5rem;
-    font-family: "Arial", cursive;
+    font-family: "Open Sans", sans-serif;
     font-weight: 500;
     padding: 1rem;
     border-radius: 1rem;
