added more content to my page

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -3,6 +3,10 @@
         display: none;
     }
 
+    .navigation a:hover {
+    border: solid .25rem #eee;
+}
+
     .navigation ul {
         display: flex;
         flex-direction: row;
