--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -64,7 +64,7 @@ h1 {
 
 .navigation a {
     text-decoration: none;
-    color: whitesmoke;
+    color: #F5F5F5;
     font-size: 1.5rem;
     font-family: "Open Sans", sans-serif;
     font-weight: 500;
@@ -103,7 +103,7 @@ h1 {
 
 .hamburger::before {
     content: "\2630";
-    color: whitesmoke;
+    color: #F5F5F5;
     display: block;
     font-size: 2rem;
     line-height: 1;
@@ -111,7 +111,7 @@ h1 {
 
 .hamburger.open::before {
     content: "\00D7";
-    color: red;
+    color: #FF0000;
     font-size: 3rem;
     line-height: 1;
 }
@@ -123,13 +123,13 @@ h1 {
 }
 
 .navigation a:hover {
-    text-decoration: underline .25rem #eee;
+    text-decoration: underline .25rem #EEEEEE;
 }
 
 header,
 footer {
-    color: whitesmoke;
-    background-color: black;
+    color: #F5F5F5;
+    background-color: #000000;
     padding: 20px;
 }
 
@@ -152,8 +152,8 @@ footer {
     padding: .5rem 1rem;
     cursor: pointer;
     border-radius: .5rem;
-    border: solid 2px black;
-    background-color: skyblue;
+    border: solid 2px #000000;
+    background-color: #87CEEB;
 }
 
 #cards.grid section {
