--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -161,8 +161,8 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    background-color: skyblue;
-    border: solid black 5px;
+    background-color: #87CEEB;
+    border: solid #000000 5px;
     padding: 4rem;
     border-radius: 25px;
 }
@@ -229,7 +229,7 @@ footer {
 }
 
 .social a:hover {
-    border: solid .25rem #eee;
+    border: solid .25rem #EEEEEE;
     border-radius: 35px;
     padding: 15px;
 }
