--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -190,7 +190,7 @@ footer {
     justify-content: space-between;
     border: 2px solid #000;
     border-radius: 1rem;
-    pad: 1rem;
+    padding: 1rem;
     background-color: #87CEEB;
 }
 
@@ -209,7 +209,7 @@ footer {
     position: relative;
     min-width: 100%;
     max-height: 600px;
-    background-color: url('cedar-hero.jpg');
+    background: url('cedar-hero.jpg');
     background-size: cover;
     background-position: center center;
 }
