--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -209,7 +209,7 @@ footer {
     position: relative;
     min-width: 100%;
     max-height: 600px;
-    background: url('cedar-hero.jpg');
+    background-image: url('./images/cedar-hero.jpg');
     background-size: cover;
     background-position: center center;
 }
