--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -313,6 +313,8 @@ footer {
     list-style: disc;
     padding-left: 2rem;
     color: var(--primary-bg);
+    margin-bottom: 1rem;
+    line-height: 1.5;
 }
 
 .events-list {
