--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -1,4 +1,4 @@
-@media (min-width: 45em) {
+@media (min-width: 60em) {
     :root {
     --primary-bg: #000000;
     --primary-text: #f5f5f5;
@@ -65,22 +65,58 @@
         flex: 1;
     }
 
-    .company-spotlights {
+    .spotlight {
+        width: clamp(220px, 30vw, 350px);
+        min-height: 200px;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 0.75rem;
+    }
+
+    .spotlight-info {
+        font-size: 1rem;
+    }
+
+    .spotlight-container {
+        grid-template-columns:  repeat(3, minmax(220px, 340px));
+    }
+
+    .company-spotlight {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-        align-items: stretch;
         justify-content: center;
+        margin: 1rem;
     }
 
-    .company-spotlights .spotlight img {
-        width: 300px;
+    .spotlight-body {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    flex: 0 0 auto;
     }
 
-    .company-spotlights .spotlight {
+    .spotlight-body img {
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    .company-spotlight .spotlight img {
+        width: clamp(90px, 8vw, 140px);
+        height: clamp(90px, 8vw, 140px);
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+
+    .company-spotlight .spotlight {
+        max-width: 700px;
+        height: auto;
+        align-self: start;
+        margin: 0 auto;
         flex-direction: column;
         text-align: center;
-        height: 100%;
-        max-width: 350px;
     }
 }
