--- a/styles/base.css
+++ b/styles/base.css
@@ -191,6 +191,39 @@ h1 {
     color: #000;
 }
 
+.course-btn {
+    border-radius: .25rem;
+    padding: 1rem;
+    margin: 1rem;
+}
+
+.course-btn:hover {
+    background-color: #ffd700;
+}
+
+/***************** DIOLOG SECTION **********************/
+
+dialog {
+    border: 1px solid rgb(0 0 0 / 10%);
+    border-radius: .25rem;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0 0 3rem #777;    
+    max-width: 600px;
+}
+
+::backdrop {
+    background-color: rgb(0 0 0 / 50%);
+}
+
+dialog button {
+    position: absolute;
+    top: 23px;
+    right: 23px;
+    padding: .5rem 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+}
+
 /***************** FOOTER **********************/
 header,
 footer {
