--- a/week06/styles/siteplan.css
+++ b/week06/styles/siteplan.css
@@ -27,7 +27,7 @@ footer {
     align-items: center;
     gap: 1rem;
     background-color: var(--primary-background);
-    color: var(--smokey);
+    color: var(--white);
 }
 
 .body-text {
@@ -43,6 +43,12 @@ h1 {
     font-family: "Almendra Display", serif;
     font-weight: 700;
     font-size: 3.5rem;
+}
+
+h2 {
+    text-decoration: underline;
+    margin-bottom: 1rem;
+    color: var(--card-background);
 }
 
 /* BODY SECTIONS */
