--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -98,7 +98,7 @@ header {
 .navigation a {
     text-decoration: none;
     color: black;
-    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
     font-family: "Work Sans", sans-serif;
     font-weight: 500;
     padding: 1rem;
@@ -175,7 +175,7 @@ footer {
 
 /* 4.1 Hero Section */
 h1 {
-    margin: clamp(1rem, 5vw, 4rem);
+    margin: clamp(1rem, 4vw, 3.5rem);
     font-family: "Almendra Display", serif;
     font-size: clamp(2rem, 5vw, 5rem);
     text-align: center;
@@ -205,9 +205,8 @@ h1 {
 .hero-image {
     width: 100%;
     height: auto;
-    max-height: 600px;
+    max-height: 400px;
     display: block;
-    object-fit: cover;
 }
 
 .about-overlay {
@@ -216,14 +215,14 @@ h1 {
     width: 90%;
     max-width: 800px;
     background-color: rgba(225, 225, 225, 0.60);
-    padding: clamp(1rem, 2vw, 2.5rem);
+    padding: 1rem 1.5rem;
     border-radius: 1rem;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     text-align: center;
 }
 
 .about-us {
-    font-size: clamp(1rem, 2vw, 2rem);
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
     line-height: 1.5;
 }
 
@@ -241,7 +240,7 @@ h1 {
         padding: 1rem;
         box-shadow: 0 2px 5px var(--primary-background);
         width: 100%;
-        max-width: 10000px;
+        max-width: 400px;
     }
 
     .forecast-day-card {
@@ -292,6 +291,7 @@ h1 {
         font-size: 2rem;
         font-weight: 400;
     }
+
 
 
 
