--- a/final/styles/final.css
+++ b/final/styles/final.css
@@ -208,6 +208,8 @@ h1 {
 .hero-container {
     padding: 0 1rem;
     width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .hero-image {
@@ -262,6 +264,7 @@ h1 {
 
     .weather-box {
         display: flex;
+        margin: 1rem auto;
         width: 100%;
         max-width: 400px;
         gap: 1rem;
